2010-08-22 Chris Morley
	
	It's a bit late for new features but the value of this one
	shows up when writing command-line documentation.
	* include/openbabel/obconversion.h, src/obconversion.cpp
	(FullConvert,OpenAndSetFormat):	When file name starts with -:
	it is treated as SMILES and put in a stringstream rather being
	used to open a ifstream.
	
	* tools/obabel.cpp: pass through files starting with "-:", e.g.
	    obabel -:CN2C(=O)N(C)C(=O)C1=C2N=CN1C -ocan
	Multiple use also possible. Not enabled in babel, but could be.
	
	* src/obconversion.cpp: Comment out line end buffer deletion,
	so cml conversion works but still have memory leak.

2010-08-19 Noel O'Boyle

	* scripts/CMakeLists.txt: Get rid of return() statements by
	reorganising logic. The way it was, if there was a problem
	with the Python bindings, it would never make it to the
	Java bindings, etc.

	Now each set of bindings has two 'if'
	statements: the first decides whether or not to try to 
	compile the bindings; the second actually does it (running
	SWIG if requested beforehand).

2010-08-19 Chris Morley

	* windows-vc2008/Distribution/NSISScriptToCreateInstaller.nsi:
	add the forgotten DLLs. Seems ok on XP but uninstall leaves some
	folders in Windows 7.

2010-08-18 Chris Morley

	* src/formats/fastsearchformat.cpp: make work with deprecated -S option
	(-s is now an op and op names are case insensitive).
    
	* tools/obabel.cpp: catch error when output specification missing
	Remove messageSummary, which is really needed only when debugging.
	Still in babel.
	 
    * src/formats/svgformat.cpp: small description change

2010-08-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/xyzformat.cpp (OpenBabel): Add parsing of 5th column
	as partial charge -- supported by Jmol and others.

2010-08-18 Tim Vandermeersch

	* include/openbabel/isomorphism.h, src/isomorphism.cpp: Use VF2
	algortihm for finding isomorphisms and set this as default algorithm.