@@ -86,11 +86,11 @@ if (DO_PYTHON_BINDINGS)
         if (PYTHON_PREFIX)
             install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} ${openbabel_SOURCE_DIR}/scripts/python/setup.py install --prefix=${PYTHON_PREFIX} WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts)")
         else (PYTHON_PREFIX)
-            if (${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
+            if (${CMAKE_INSTALL_PREFIX} STREQUAL "/usr/local")
                 install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} ${openbabel_SOURCE_DIR}/scripts/python/setup.py install WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts)")
-            else (${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
+            else (${CMAKE_INSTALL_PREFIX} STREQUAL "/usr/local")
                 install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} ${openbabel_SOURCE_DIR}/scripts/python/setup.py install --prefix=${CMAKE_INSTALL_PREFIX} WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts)")
-            endif (${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
+            endif (${CMAKE_INSTALL_PREFIX} STREQUAL "/usr/local")
         endif (PYTHON_PREFIX)
 
     else(NOT WIN32)
@@ -213,9 +213,9 @@ if (DO_PERL_BINDINGS)
     if (PERL_PREFIX)
       set(PERL_PREFIX_TEXT "PREFIX=${PERL_PREFIX}")
     else (PERL_PREFIX)
-      if (NOT ${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
+      if (NOT ${CMAKE_INSTALL_PREFIX} STREQUAL "/usr/local")
         set(PERL_PREFIX_TEXT "PREFIX=${CMAKE_INSTALL_PREFIX}")
-      endif (NOT ${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
+      endif (NOT ${CMAKE_INSTALL_PREFIX} STREQUAL "/usr/local")
     endif (PERL_PREFIX)
 
     if (NOT MSVC)
@@ -297,11 +297,11 @@ if (DO_RUBY_BINDINGS)
       if (RUBY_PREFIX)
         install(CODE "execute_process(COMMAND DESTDIR=${RUBY_PREFIX} make install WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts/ruby)")
       else (RUBY_PREFIX)
-        if (${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
+        if (${CMAKE_INSTALL_PREFIX} STREQUAL "/usr/local")
           install(CODE "execute_process(COMMAND make install WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts/ruby)")
-        else (${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
+        else (${CMAKE_INSTALL_PREFIX} STREQUAL "/usr/local")
           install(CODE "execute_process(COMMAND DESTDIR=${CMAKE_INSTALL_PREFIX} make install WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts/ruby)")
-        endif (${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
+        endif (${CMAKE_INSTALL_PREFIX} STREQUAL "/usr/local")
       endif (RUBY_PREFIX)
     else(NOT MSVC)
       add_library(bindings_ruby MODULE ${openbabel_SOURCE_DIR}/scripts/ruby/openbabel-ruby.cpp)
